[gd_scene load_steps=10 format=2]

[ext_resource path="res://CharacterScenes/Enemy/enemy.png" type="Texture" id=1]
[ext_resource path="res://CharacterScenes/Enemy/Enemy.gd" type="Script" id=2]
[ext_resource path="res://CharacterScenes/Enemy/EnemyStateMachine.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.95284, 20.0585 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.44524, 19.684 )

[sub_resource type="Animation" id=3]
resource_name = "Attack"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackHitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 0.75
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Walk"
length = 0.75
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 6.47198, 3.10712 )

[node name="Enemy" type="KinematicBody2D" groups=[
"Enemy",
]]
script = ExtResource( 2 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.90245, 0.531526 )
texture = ExtResource( 1 )
hframes = 4
vframes = 6
frame = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.654177, 22.4738 )
shape = SubResource( 1 )

[node name="EnemyHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitbox"]
position = Vector2( 0.291046, 22.8435 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Attack = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/Walk = SubResource( 5 )

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="PlayerDetector" type="RayCast2D" parent="."]
position = Vector2( 0, 22.323 )
rotation = 4.71239
enabled = true
cast_to = Vector2( 0, -80 )

[node name="AttackHitbox" type="Area2D" parent="." groups=[
"EnemyAttack",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackHitbox"]
position = Vector2( -20.9847, 16.542 )
shape = SubResource( 6 )
disabled = true

[connection signal="enemy_hit" from="." to="StateMachine" method="_on_Enemy_enemy_hit"]
[connection signal="area_entered" from="EnemyHitbox" to="." method="_on_Area2D_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine" method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="KnockbackTimer" to="StateMachine" method="_on_KnockbackTimer_timeout"]
[connection signal="timeout" from="AttackCooldown" to="StateMachine" method="_on_AttackCooldown_timeout"]
